# Breakout

./: CMakeLists.txt  build.gradle
Client/: build.gradle
Client/src/main/java/ce/client/GameItems/Blocks/: Block.java
Client/src/main/java/ce/client/Scenes/: GameScene.java
Client/src/main/resources/ce/client/: hello-view.fxml
Cliente/: pom.xml
Cliente/src/main/java/: SocketFactory.java
Servidor/: CMakeLists.txt  Consts.c  Consts.h  main.c  main.h
Servidor/Adapter/: Adapter.c  Adapter.h
Servidor/Double linked list/: DLL.c  DLL.h
Servidor/Engine/: Engine.c  Engine.h
Servidor/Gamedata/: Game_data.c  Game_data.h  asd.c  asd.h
Servidor/Socket/: Socket.c  Socket.h
src/main/java/: module-info.java
src/main/java/ce/client/: MainApp.java
src/main/java/ce/client/GameItems/: Ball.java  Bar.java  GameData.java  GameItem.java  PlayerBar.java
src/main/java/ce/client/GameItems/Blocks/: Block.java
src/main/java/ce/client/GameItems/Factory/: GameItemFactory.java
src/main/java/ce/client/Scenes/: GameScene.java  PlayScene.java  SpectateScene.java
src/main/java/ce/client/Sockets/: Socket.java  SocketFactory.java
src/main/java/ce/client/Windows/: MainWindow.java
